--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -1,3 +1,7 @@
+.logo_img{
+width: 100px;
+}
+
 .userIcon {
     color: gray;
     font-size: 20px;
@@ -5,9 +9,9 @@
 
 .inputSearch {
     height: 50px;
-    border-left: 2px red solid;
-    border-top: 2px red solid;
-    border-bottom: 2px red solid;
+    border-left: 2px #151f42 solid;
+    border-top: 2px #151f42 solid;
+    border-bottom: 2px #151f42 solid;
     border-right: none;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
@@ -15,43 +19,43 @@
 
 .inputSearch:focus {
     box-shadow: none;
-    border-color: red;
+    border-color: #151f42;
 }
 
 .searchDropdown {
     height: 50px;
     background-color: #fff;
-    border-left: 1px red solid;
-    border-top: 2px red solid;
-    border-bottom: 2px red solid;
+    border-left: 1px #151f42 solid;
+    border-top: 2px #151f42 solid;
+    border-bottom: 2px #151f42 solid;
 }
 
 .searchButton { 
     margin: 0;
     padding: 0.5rem 1.5rem;
-    background-color: red;
-    border-left: 1px red solid;
-    border-right: 1px red solid;
-    border-top: 1px red solid;
-    border-bottom: 1px red solid;
+    background-color: #151f42;
+    border-left: 1px #151f42 solid;
+    border-right: 1px #151f42 solid;
+    border-top: 1px #151f42 solid;
+    border-bottom: 1px #151f42 solid;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
 
 .searchButton:hover { 
-    background-color: red;
-    border-left: 1px red solid;
-    border-right: 1px red solid;
-    border-top: 1px red solid;
-    border-bottom: 1px red solid;
+    background-color: #151f42;
+    border-left: 1px #151f42 solid;
+    border-right: 1px #151f42 solid;
+    border-top: 1px #151f42 solid;
+    border-bottom: 1px #151f42 solid;
 }
 
 .searchButton:active { 
-    background-color: red !important;
-    border-left: 1px red solid !important;
-    border-right: 1px red solid !important;
-    border-top: 1px red solid !important;
-    border-bottom: 1px red solid !important;
+    background-color: #151f42 !important;
+    border-left: 1px #151f42 solid !important;
+    border-right: 1px #151f42 solid !important;
+    border-top: 1px #151f42 solid !important;
+    border-bottom: 1px #151f42 solid !important;
 }
 
 .awesomeIcon {
